--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,19 @@
 html {
     background-color: darkslategray;
     color: whitesmoke;
-    font-family:monospace;
+    font-family: Futura;
     box-sizing: border-box;
+    letter-spacing: 1px;
 }
 
 body {
     margin: 0;
     padding: 0;
+}
+
+section {
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 h1 {
@@ -29,6 +35,9 @@ a {
     color:whitesmoke;
 }
 
+a:hover {
+    background-color: #612a11;
+}
 
 .project-link:hover {
     background-color: #612a11;
@@ -57,13 +66,41 @@ nav {
     background-color: #612a11;
 }
 
+@media (max-width:500px) {
+    .nav-list {
+        font-size: small;
+        padding: 10px;
+    }
+
+    h1 {
+        font-size: 3rem;
+    }
+}
+
+/* Welcome Section */
+
 .welcome-section {
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     height: 100vh;
     width: 100%;
+}
+
+.face {
+    border-radius: 50%
+}
+
+.scientist {
+    color:#b4786b
+}
+
+.triangle {
+    border-top: 10vh solid pink;
+    border-left: 10vw solid transparent;
+    border-right: 10vw solid transparent;
 }
 
 
@@ -74,8 +111,7 @@ nav {
     max-height: 400px;
 }
 
-.projects {
-    margin-left: 10px;
+.projects-section {
     padding-top: 40px;
     padding-bottom: 40px;
 }
@@ -96,10 +132,80 @@ img {
 
  li {
     font-weight: normal;
+    font-family: monospace;
+    font-size: large;
  }
 
- .data-analysis {
+ .certification-name {
+    font-size: large;
+    color: pink;
+ }
+
+ .center {
+    display: block;
     margin-left: 10px;
-    margin-right: 10px;
+    margin-right: auto;
+    width: 500px;
+  }
+
+  .badge { 
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
+}
+
+.data-analysis-img {
+    max-width: 500px;
+}
+
+@media (max-width:500px) {
+    .project-tile-image { 
+        max-height: 200px;
+    }
+
+    .data-analysis-img {
+        max-width: 300px;
+    }
+}
+
+ /* Footer (Connect Section) */
+
+ .connect-section {
+    padding-bottom: 40px;
+ }
+
+ .social-icons {
+  display: flex;
+  font-size: 1.2em;
+  flex-direction: column;
+  justify-content: space-around;
+  gap: 10px;
+  width: 30%;
+  margin-left: 50px;
+  align-items: center;
+}
+
+i {
+    color:#612a11;
+}
+
+ .connect {
+    margin-left: 10px;
+ }
+ 
+.socials {
+    color:darkslategray;
+}
+ .socials:hover {
+    background-color: whitesmoke;
+ }
+
+footer {
+    background-color: #b4786b;
+    position: absolute;
+    padding-bottom: 40px;
+    width: 100%;
+    margin-right: 0;
  }
 
